# bee

./: ARCHITECTURE.md
bee-crypto/: Cargo.toml
bee-crypto/benches/: troika_benchmark.rs
bee-crypto/src/: curl.rs  lib.rs  troika.rs
